# COOL-MC

./: .gitignore  README.md  clean_projects.py  cool_mc.py  different_prunings.eps  index.html  last_run.txt  passenger_gas.eps  playground.py  plot_combined.eps  plot_different_layers_combined.py  plot_different_layers_empty.py  plot_different_layers_jobs2.py  plot_different_layers_passenger_gas.py  plot_different_prunings.py  plot_empty.eps  plot_quantum_circuit.py  pyproject.toml  requirements.txt  run_tests.py
.devcontainer/: Dockerfile  Dockerfile.server  devcontainer.json  docker-compose.yml
coolmc/: Dockerfile  __init__.py  client.py  config.py  docker_manager.py  start.sh  storm.py
examples/: action_distribution_example.sh  action_label_example.sh  adv_analysis.sh  avoid_experiments.sh  bc_pacman_decision_tree_example.sh  bc_pacman_ppo_example.sh  bc_resource_gathering_decision_tree_example.sh  bc_zeroconf_decision_tree_example.sh  behavioral_cloning_examples.sh  blood_platelets_ppo2.sh  blood_platelets_ppo2_analysis.sh  cc_experiments.sh  client_api_example.py  co_activation_graph_analysis.sh  compressed_dummy_bc_dt.sh  compressed_dummy_dqn.sh  crazy_climber_experiments.sh  dead_end_example.sh  dead_end_simple_example.sh  djssp_experiments.sh  dummy_taxi_deterministic_vs_stochastic.sh  feature_pruning_example.sh  freeway.sh  freeway_experiments.sh  frozen_lake_example.sh  frozen_lake_experiments.sh  graph_vis.sh  icu_sepsis_bc_dt.sh  icu_sepsis_dqn.sh  icu_sepsis_permutation_importance.sh  icu_sepsis_ppo.sh  icu_sepsis_ppo_analysis.sh  icu_sepsis_ppo_pruning.sh  (+41 more)
(+216 files in other folders)
